fixed dark mode and night mode toggle icon

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="site-header" id="top">
       <div class="container header-inner">
         <a class="brand" href="#top" aria-label="Bit Weavers home">
-          <img src="assets/bitweavers-logo.png" alt="Bit Weavers" class="brand-logo" />
+          <img src= "hospitalimage/bitwears.png" alt="Bit Weavers" class="brand-logo" />
         </a>
         <nav class="site-nav" aria-label="Primary">
           <button class="nav-toggle" aria-controls="primary-menu" aria-expanded="false"><span class="sr-only">Toggle menu</span><i class="fa-solid fa-bars"></i></button>
@@ -81,17 +81,34 @@
             <p>Trusted by leading hospitals and organizations.</p>
           </div>
           <div class="logo-grid">
-            <a class="logo" href="#" aria-label="Marie Stopes International"><img src="assets/clients/marie-stopes-international.png" alt="Marie Stopes International"></a>
-            <a class="logo" href="#" aria-label="Adama General Hospital & Medical College"><img src="assets/clients/adama-general-hospital.png" alt="Adama General Hospital & Medical College"></a>
-            <a class="logo" href="#" aria-label="Sher Ethiopia"><img src="assets/clients/sher-ethiopia.png" alt="Sher Ethiopia"></a>
-            <a class="logo" href="#" aria-label="Life Addis Clinical Laboratory"><img src="assets/clients/life-addis-clinical-lab.png" alt="Life Addis Clinical Laboratory"></a>
-            <a class="logo" href="#" aria-label="Silk Road General Hospital"><img src="assets/clients/silk-road-general-hospital.png" alt="Silk Road General Hospital"></a>
-            <a class="logo" href="#" aria-label="Soddo Christian Hospital"><img src="assets/clients/soddo.png" alt="Soddo Christian Hospital"></a>
-            <a class="logo" href="#" aria-label="NAGHMC"><img src="assets/clients/naghmc.png" alt="NAGHMC"></a>
-            <a class="logo" href="#" aria-label="Hallelujah General Hospital"><img src="assets/clients/hallelujah-general-hospital.png" alt="Hallelujah General Hospital"></img></a>
+            <a class="logo" href="#" aria-label="Marie Stopes International">
+              <img src="hospitalimage/marie-stopes-int-min (1).png" alt="Marie Stopes International" />
+            </a>
+            <a class="logo" href="#" aria-label="Adama General Hospital & Medical College">
+              <img src="hospitalimage/adama_logo_2-1.png" alt="Adama General Hospital & Medical College" />
+            </a>
+            <a class="logo" href="#" aria-label="Sher Ethiopia">
+              <img src="hospitalimage/sher.jpg" alt="Sher Ethiopia" />
+            </a>
+            <a class="logo" href="#" aria-label="Life Addis Clinical Laboratory">
+              <img src="hospitalimage/lifeaddis.jpg" alt="Life Addis Clinical Laboratory" />
+            </a>
+            <a class="logo" href="#" aria-label="Silk Road General Hospital">
+              <img src="hospitalimage/silk_road.png" alt="Silk Road General Hospital" />
+            </a>
+            <a class="logo" href="#" aria-label="Soddo Christian Hospital">
+              <img src="hospitalimage/soddo_hospital.png" alt="Soddo Christian Hospital" />
+            </a>
+            <a class="logo" href="#" aria-label="Negele General Hospital">
+              <img src="hospitalimage/NEGELE-GEN-ICON-ONLY-300-web-min.png" alt="Negele General Hospital" />
+            </a>
+            <a class="logo" href="#" aria-label="Hallelujah General Hospital">
+              <img src="hospitalimage/hallelujah-website-min.png" alt="Hallelujah General Hospital" />
+            </a>
           </div>
         </div>
       </section>
+      
 
       <section id="contact" class="section contact" aria-labelledby="contact-title">
         <div class="container contact-grid">
